--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@ background-color: #ffffff;
  दिवशी
  सुद्धा
  
- “<strong> शिवसेनाा(शिंदे गट) </strong>”
+ “<strong> शिवसेना(शिंदे गट) </strong>”
  पक्षाचे लोकप्रिय उमेदवार 
  
  “<strong> परदेशी वैशाली ईश्वर </strong>” यांना
@@ -981,21 +981,6 @@ background-color: #ffffff;
     margin-left: calc(var(--bs-gutter-x) / -2);
 }
  </style>
- <footer>
-                <div class="footer clearfix mb-0 text-muted">
-                    <div class="row">
-                    <div class="col-5">
-                    <div class="float-start">
-                        <p>2025 &copy; <a href="https://eduapp.in">eduapp.in</a></p>
-                    </div>
-                    </div>
-                    <div class="col-7">
-                    <div class="float-end">
-                        <p>Crafted with ❤️ by <a href='tel:+919823586999'>+91 9823586999</a></p>                    </div>
-                    </div>
-                    </div>
-                </div>
-            </footer>
             
      <script src="js/jquery.js"></script>
     <script>
